[package]
name = "rascaline-c-api"
version = "0.1.0"
authors = ["Luthaf <luthaf@luthaf.fr>"]
edition = "2021"

[lib]
name = "rascaline"
# when https://github.com/rust-lang/cargo/pull/8789 lands, use it here!
# until then, build all the crate-type we need
crate-type = ["cdylib", "staticlib"]
bench = false

[features]
default = ["chemfiles"]
chemfiles = ["rascaline/chemfiles"]
serialization = ["equistore/serialization"]

[dependencies]
rascaline = {path = "../rascaline", version = "0.1.0", default-features = false}
equistore = {git = "https://github.com/lab-cosmo/equistore", rev = "6ca7fa3"}

ndarray = "0.15"
log = { version = "0.4", features = ["std"] }
once_cell = "1"
time-graph = {version = "0.1.3", features = ["table", "json"]}
libc = "0.2"

[build-dependencies]
cbindgen = { version = "0.24", default-features = false }
glob = "0.3"
equistore = {git = "https://github.com/lab-cosmo/equistore", rev = "6ca7fa3"}

[dev-dependencies]
which = "4"
