[package]
name = "rascaline-torch"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "lib.rs"
test = false
doctest = false

[dev-dependencies]
which = "5"

# This is the last version supporting rustc 1.65
home = "=0.5.5"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
