[package]
name = "rascaline"
version = "0.1.0"
authors = ["Luthaf <luthaf@luthaf.fr>"]
edition = "2018"

[lib]
bench = false

[features]
default = ["chemfiles"]

[[bench]]
name = "spherical-harmonics"
harness = false

[[bench]]
name = "soap-radial-integral"
harness = false

[[bench]]
name = "spherical-expansion"
harness = false

[[bench]]
name = "soap-power-spectrum"
harness = false

[dependencies]
ndarray = {version = "0.15", features = ["approx-0_5", "rayon"]}
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-traits = "0.2"
indexmap = "1.6"
log = "0.4"
itertools = "0.10"
schemars = "0.8"
time-graph = "0.1.3"
twox-hash = "1.6"
thread_local = "1.1"
rayon = "1.5"
crossbeam = "0.8"
chemfiles = {version = "0.10", optional = true}

# pin cmake to 0.1.45 since 0.1.46 requires the --parallel flag which is not
# available on the default cmake on ubuntu 18.04
# https://github.com/alexcrichton/cmake-rs/issues/131
cmake = "=0.1.45"

[dev-dependencies]
approx = "0.5"
criterion = "0.3"
glob = "0.3"
ndarray-npy = "0.8"
flate2 = "1.0.20"
time-graph = {version = "0.1.3", features = ["table", "json"]}
