[package]
name = "rascaline"
version = "0.1.0"
authors = ["Luthaf <luthaf@luthaf.fr>"]
edition = "2021"
rust-version = "1.61"

[lib]
bench = false

[features]
default = ["chemfiles"]

[[bench]]
name = "spherical-harmonics"
harness = false

[[bench]]
name = "soap-radial-integral"
harness = false

[[bench]]
name = "lode-spherical-expansion"
harness = false

[[bench]]
name = "soap-spherical-expansion"
harness = false

[[bench]]
name = "soap-power-spectrum"
harness = false

[dependencies]
equistore = {git = "https://github.com/lab-cosmo/equistore", rev = "467baf0", features = ["ndarray", "rayon"]}

ndarray = {version = "0.15", features = ["approx-0_5", "rayon", "serde"]}
num-traits = "0.2"
rayon = "1.5"

log = "0.4"
once_cell = "1"
indexmap = "1.8"
thread_local = "1.1"
time-graph = "0.1.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

chemfiles = {version = "0.10", optional = true}

# pin cmake to 0.1.45 since 0.1.46 requires the --parallel flag which is not
# available on the default cmake on ubuntu 18.04
# https://github.com/alexcrichton/cmake-rs/issues/131
cmake = "=0.1.45"

approx = "0.5"

[dev-dependencies]
criterion = "0.3"
glob = "0.3"
ndarray-npy = "0.8"
flate2 = "1.0.20"
time-graph = {version = "0.1.3", features = ["table", "json"]}
