[package]
name = "rascaline"
version = "0.1.0"
authors = ["Luthaf <luthaf@luthaf.fr>"]
edition = "2021"
rust-version = "1.74"

[lib]
bench = false

[features]
# We use a static version of metatensor by default since otherwise doctests can
# not find libmetatensor.so
default = ["chemfiles", "static-metatensor"]

static-metatensor = ["metatensor/static"]

[[bench]]
name = "spherical-harmonics"
harness = false

[[bench]]
name = "soap-radial-integral"
harness = false

[[bench]]
name = "lode-spherical-expansion"
harness = false

[[bench]]
name = "soap-spherical-expansion"
harness = false

[[bench]]
name = "soap-power-spectrum"
harness = false

[dependencies]
metatensor = {version = "0.2", features = ["rayon"]}

ndarray = {version = "0.16", features = ["rayon", "serde", "approx"]}
num-traits = "0.2"
rayon = "1.5"

log = "0.4"
once_cell = "1"
indexmap = "2"
thread_local = "1.1"
time-graph = "0.3.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

chemfiles = {version = "0.10", optional = true}

approx = "0.5"

[dev-dependencies]
criterion = "0.5"

glob = "0.3"
ndarray-npy = "0.9"
flate2 = "1.0.20"
time-graph = {version = "0.3.0", features = ["table", "json"]}
