[package]
name = "rascaline-json-schema"
version = "0.1.0"
authors = ["Luthaf <luthaf@luthaf.fr>"]
edition = "2018"
publish = false
rust-version = "1.64"

[[bin]]
name = "rascaline-json-schema"
path = "main.rs"
bench = false
test = false

[dependencies]
rascaline = {path = "../../rascaline"}
schemars = "0.8.6"
serde_json = "1"
