[project]
name = "featomic-torch"
dynamic = ["version", "authors", "dependencies"]
requires-python = ">=3.9"

readme = "README.rst"
license = {text = "BSD-3-Clause"}
description = "TorchScript bindings to featomic"

keywords = ["computational science", "machine learning", "molecular modeling", "atomistic representations", "torch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://metatensor.github.io/featomic/latest/"
documentation = "https://metatensor.github.io/featomic/latest/"
repository = "https://github.com/metatensor/featomic"
# changelog = "TODO"

### ======================================================================== ###
[build-system]
requires = [
    "setuptools >=61",
    "wheel >=0.38",
    "packaging",
    "cmake",
]

# use a custom build backend to add a dependency on the right version of featomic
build-backend = "backend"
backend-path = ["build-backend"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["featomic*"]
namespaces = true

### ======================================================================== ###

[tool.pytest.ini_options]
python_files = ["*.py"]
testpaths = ["tests"]

### ======================================================================== ###

[tool.uv.pip]
reinstall-package = ["featomic", "featomic-torch"]
